@@ -1,3 +1,4 @@
+8/21/12 delete RoundedStraightLine class, handle snap-to-grid in drag handlers for line manipulators
 8/21/12 fix issues with StraightLine.solveX and solveY
 8/20/12 simplify StraightLine model by deleting redundant yIntercept field
 8/20/12 bug fix in WellDefinedLineProperty constructor
